Moved code runner to AWS lambda

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ DEBUG=True
 SECRET_KEY=your_secret_key_here
 DATABASE_URL=your_database_url_here
 ALLOWED_HOSTS=your_allowed_hosts_here
+
+# AWS Configuration
+AWS_ACCESS_KEY_ID=your_aws_access_key_id_here
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key_here
+AWS_REGION=your_aws_region_here
+AWS_LAMBDA_FUNCTION_NAME=your_lambda_function_name_here
